# discord_bot

./: .gitignore  app.py  core.py  pyproject.toml  readme.md  run.py
core/: __init__.py  _bot.py  app.py  constant.py  context.py  hook.py  utils.py
plugins/: bkss.py  haha.py  hello.py  help.py  invite.py  link.py  week.py
plugins/course/: 2023.S2.json  __init__.py
plugins/cron/: __init__.py
plugins/game/: __init__.py  active.py  bet.py  checkin.py  gacha.py  money.py  user.py
plugins/game/who_is_suspect/: __init__.py
plugins/tool/: __init__.py  link.py  rate.py  user.py
plugins/tool/course/: 2023.S1.json  __init__.py
