[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["bridge <wxlxy316@163.com>"]
readme = "README.md"
packages = [{include = "discord_bot"}]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.3.1"
aiocron = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
